WebApplications/tomcat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat-deployment
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32000
